# Native-Solana-Jane-kova-metoda-

./: .gitignore
client/: .gitignore  INTEGRATION_TESTS.md  PROJECT_STRUCTURE.md  README.md  config.template.ts  jest.config.js  package-lock.json  package.json  setup.sh
client/examples/: basic-usage.ts  owner-transfer.ts  voting-scenarios.ts
client/scripts/: fund-accounts.ts
client/src/: client.ts  config.ts  des.ts  index.ts  instructions.ts  types.ts  utils.ts
client/src/__tests__/: client.test.ts  integration.test.ts
client/src/accounts/: PollAccount.ts
client/src/services/: TransactionService.ts  accountService.ts  pollService.ts  pollTransaction.ts
client/src/types/: CreatePoll.ts  Discriminator.ts  PartyAccount.ts  PollState.ts  VoteType.ts  VoterAccount.ts  VotingPhase.ts  payloads.ts
client/src/utils/: derivePda.ts  deserialize.ts  getParties.ts  serialize.ts
janecek_voting/: Cargo.toml
janecek_voting/src/: instruction.rs  processor.rs  state.rs
janecek_voting/tests/: accept_owner_transfer_test.rs  create_party_test.rs  create_poll_test.rs  helpers.rs  initiate_owner_transfer_test.rs  start_voting_test.rs  vote_test.rs
src/: error.rs  instruction.rs  processor.rs
